force-app/main/default/objects/Account_Team_Approval__c/Account_Team_Approval__c.object-meta.xml
<CustomObject>
    <label>Account Team Approval</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Team Approval Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>