force-app/main/default/objects/Account_Team_Approval__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Approvals</relationshipLabel>
    <relationshipName>Account_Team_Approvals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>