force-app/main/default/objects/Account_Team_Approval__c/fields/Add_Member__c.field-meta.xml
<CustomField>
    <fullName>Add_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>