force-app/main/default/objects/Account_Team_Approval__c/fields/Add_Role__c.field-meta.xml
<CustomField>
    <fullName>Add_Role__c</fullName>
    <label>Add Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>Client Care</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>FLD</fullName>
            </value>
            <value>
                <fullName>FLDS</fullName>
            </value>
            <value>
                <fullName>FLED</fullName>
            </value>
            <value>
                <fullName>FLI</fullName>
            </value>
            <value>
                <fullName>FRR</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>MMAE</fullName>
            </value>
            <value>
                <fullName>National Account Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>