force-app/main/default/objects/Account_Team_Approval__c/fields/Add_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Add_Service_Line__c</fullName>
    <label>Add Service Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Court &amp; Process</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>E-Discovery</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>