force-app/main/default/objects/Account_Team_Approval__c/fields/CCF_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CCF_End_Date__c</fullName>
    <label>Remove Date</label>
    <type>Date</type>
</CustomField>