force-app/main/default/objects/Account_Team_Approval__c/fields/CCF_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CCF_Start_Date__c</fullName>
    <label>Add Date</label>
    <type>Date</type>
</CustomField>