force-app/main/default/objects/Account_Team_Approval__c/fields/IsReportingManager__c.field-meta.xml
<CustomField>
    <fullName>IsReportingManager__c</fullName>
    <formula>$User.Id =  Reporting_Manager__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsReportingManager</label>
    <type>Checkbox</type>
</CustomField>