force-app/main/default/objects/Account_Team_Approval__c/fields/Remove_Member__c.field-meta.xml
<CustomField>
    <fullName>Remove_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remove Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>