force-app/main/default/objects/Account_Team_Approval__c/fields/Remove_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Remove_Service_Line__c</fullName>
    <label>Remove Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Court &amp; Process</fullName>
            </value>
            <value>
                <fullName>Depositions; Digital</fullName>
            </value>
            <value>
                <fullName>E-Discovery</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>