force-app/main/default/objects/Account_Team_Approval__c/fields/Reporting_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Manager Approved</label>
    <type>Checkbox</type>
</CustomField>