force-app/main/default/objects/Account_Team_Approval__c/fields/Reporting_Manager_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Decision_Date__c</fullName>
    <label>Reporting Manager Decision Date</label>
    <type>Date</type>
</CustomField>