force-app/main/default/objects/Account_Team_Approval__c/fields/Sales_Operation_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operation_Decision_Date__c</fullName>
    <label>Sales Operations Decision Date</label>
    <type>Date</type>
</CustomField>