force-app/main/default/objects/Account_Team_Approval__c/fields/Sales_Operations_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Operations Approved</label>
    <type>Checkbox</type>
</CustomField>