force-app/main/default/objects/Account_Team_Approval__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FLCP New Business Submission</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>SME Submission</fullName>
            </value>
            <value>
                <fullName>Management Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>