force-app/main/default/objects/Account_Team_Approval__c/listViews/Sales_Operations_Account_Team_Approval.listView-meta.xml
<ListView>
    <fullName>Sales_Operations_Account_Team_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Operations</label>
    <queue>Sales_Operations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>